style: fix menu-item collapsed icon postion

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -164,8 +164,9 @@
         min-width: initial;
 
         .@{prefix}-icon {
-          position: relative;
+          position: absolute;
           margin: 0;
+          top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
         }
